--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "matchdep": "~0.1.2",
-    "grunt-reveal-jade": "git://github.com/pajtai/grunt-reveal-jade.git#master",
+    "grunt-reveal-jade": "~0.0.1",
     "grunt-open": "~0.2.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-livereload": "git://github.com/pajtai/grunt-contrib-livereload.git#multi-write"
+    "grunt-contrib-livereload": "~0.1.2",
+    "grunt-shell": "~0.2.2",
+    "grunt-build-gh-pages": "0.0.4"
   }
 }
